Bug 169657 - The background color of the Hide/Show button is too dark
Summary: The background color of the Hide/Show button is too dark
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: UI-Theming Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2025-11-24 10:22 UTC by nutka
Modified: 2025-12-10 08:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Demonstrating the issue: 25.8.3.2 vs 26.2.0.0.alpha1+ (294.70 KB, image/gif)
2025-11-24 10:25 UTC, nutka
Details
the Insert toolbar (Writer) - same problem (46.62 KB, image/gif)
2025-11-24 18:14 UTC, nutka
Details
Screencast with modified colors (78.24 KB, image/gif)
2025-12-03 14:42 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nutka 2025-11-24 10:22:21 UTC
Description:
Version 26.2 changed the background color of the Hide/Show button. Now it looks unappealing.


Actual Results:
Background color is too dark.

Expected Results:
The background color should be the same as in version 25.8.3.2 or similar.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (fr_FR); UI: en-US
Calc: threaded


Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (fr_FR); UI: en-US
Calc: threaded
Comment 1 nutka 2025-11-24 10:25:12 UTC
Created attachment 204250 [details]
Demonstrating the issue: 25.8.3.2 vs 26.2.0.0.alpha1+
Comment 2 V Stuart Foote 2025-11-24 16:07:23 UTC
OK, but have you checked with the WDM os/DE in the 'Dark' color scheme? IMHO the change at 26.2 now is more effective for 'Automatic' UI color theming.

And, when an Appearance theme is installed and set active, the controls follow the  values picked up from the appearance theme.

IMHO => NAB and => WF

@Mihai, Heiko, Sahil -- thoughts?
Comment 3 Mihai Vasiliu 2025-11-24 16:36:52 UTC
I can reproduce this regardless of OS Light/Dark mode (in Windows) as follows:

- Using Office 2003 Light Blue theme, the button color is dark.
- Using Office 2003 Dark Blue theme, the button color is light.

Seems that it is behaving this way to contrast on mouse hover with the original color. I can't find a presettable color for this that can be changed in the theme (or i missed it).
Comment 4 nutka 2025-11-24 18:14:58 UTC
Created attachment 204258 [details]
the Insert toolbar (Writer) - same problem
Comment 5 Heiko Tietze 2025-12-03 14:42:57 UTC
Created attachment 204407 [details]
Screencast with modified colors

The splitwindow buttons use DarkShadow (and Face on hover), the screecast shows how it looks with Accent color. I'm a bit afraid as this might be too strong, thinking of Ubuntu's orange.
Comment 6 Commit Notification 2025-12-04 08:51:25 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb513e96584bb90a6133f838def01b0a16558192

Resolves tdf#169657 - Make the splitwindow buttons more outstanding on hover

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Heiko Tietze 2025-12-04 09:00:50 UTC
(In reply to Heiko Tietze from comment #5)
> I'm a bit afraid as this might be too strong, thinking of Ubuntu's orange.
In the end it's just the hover appearance that changed from Face color to Highlight.
Comment 8 nutka 2025-12-10 08:14:44 UTC
It looks better now. Thank you!

Version: 26.2.0.0.beta1 (X86_64)
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (fr_FR); UI: en-US
Calc: threaded