Resolves tdf#169657 - Make the splitwindow buttons more outstanding on hover

Change-Id: I24a93f47ae0af87ecd6fb48db6bd611563913d8c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194962
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins